--- a/vagrant_playbook.yml
+++ b/vagrant_playbook.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: all
+- hosts: default
   sudo: yes
   user: vagrant
   tasks:
-    - name: install vim
-      apt: pkg=vim update_cache=yes state=latest
-    - name: install git
-      apt: pkg=git update_cache=yes state=latest
-
+    - name: install packages by apt
+      apt: pkg={{ item }} update_cache=yes state=latest
+      with_items:
+        - git
+        - vim
